--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@metamask/onboarding": "^1.0.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-hot-toast": "^2.1.0",
+    "web3": "^1.5.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.3.2",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-windicss": "^1.2.7",
+    "windicss": "^3.1.7"
   }
 }
