📦 Add ethers.js

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@metamask/onboarding": "^1.0.1",
+    "ethers": "^5.4.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hot-toast": "^2.1.0",
